--- a/adaflow/config/train_diffusion_unet_ddim_image_workspace.yaml
+++ b/adaflow/config/train_diffusion_unet_ddim_image_workspace.yaml
@@ -101,7 +101,7 @@ training:
   # optimization
   lr_scheduler: cosine
   lr_warmup_steps: 500
-  num_epochs: 8000
+  num_epochs: 1000
   gradient_accumulate_every: 1
   # EMA destroys performance when used with BatchNorm
   # replace BatchNorm with GroupNorm.
@@ -109,12 +109,12 @@ training:
   freeze_encoder: False
   # training loop control
   # in epochs
-  rollout_every: 50
-  checkpoint_every: 50
+  rollout_every: 200
+  checkpoint_every: 200
   val_every: 1
   sample_every: 5
   # steps per epoch
-  max_train_steps: null
+  max_train_steps: 500
   max_val_steps: null
   # misc
   tqdm_interval_sec: 1.0
@@ -139,14 +139,14 @@ checkpoint:
   save_last_snapshot: False
 
 multi_run:
-  run_dir: exps/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}_${dataset_type}
+  run_dir: /mnt/data0/abhim/exps/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}_${dataset_type}
   wandb_name_base: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}_${dataset_type}
 
 hydra:
   job:
     override_dirname: ${name}
   run:
-    dir: exps/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}_${dataset_type}
+    dir: /mnt/data0/abhim/exps/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}_${dataset_type}
   sweep:
-    dir: exps/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}_${dataset_type}
+    dir: /mnt/data0/abhim/exps/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}_${dataset_type}
     subdir: ${hydra.job.num}
